--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <main>
             <section id="investment" class="bg-white rounded-2xl shadow-lg p-6 md:p-10 text-center">
                 <h2 class="text-xl font-bold text-gray-500 uppercase tracking-wider">Final Proposed Investment</h2>
-                <div class="my-4 text-7xl md:text-8xl font-extrabold" style="color: #003F5C;">
+                <div class="my-4 text-5xl sm:text-6xl md:text-8xl font-extrabold" style="color: #003F5C;">
                     ₹4,90,000
                 </div>
                 <p class="text-gray-600">
