--- a/index.html
+++ b/index.html
@@ -98,6 +98,51 @@
                 </p>
             </section>
 
+            <section id="investment-breakdown" class="mt-12 bg-white rounded-lg shadow-md p-6 md:p-8">
+                <h2 class="text-3xl font-bold text-center mb-6">Investment Breakdown</h2>
+                <p class="text-gray-600 text-center mb-8">A transparent view of all costs, including one-time and recurring fees, to ensure clarity and budget alignment.</p>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <div>
+                        <h3 class="font-bold text-xl mb-4" style="color: #003F5C;">One-Time Costs</h3>
+                        <ul class="space-y-4 text-gray-700">
+                            <li class="flex justify-between items-center">
+                                <span class="font-semibold">&#128736; Implementation Services</span>
+                                <span>₹2,50,000</span>
+                            </li>
+                            <li class="flex justify-between items-center">
+                                <span class="font-semibold">&#128221; Customization Charges</span>
+                                <span>₹62,500</span>
+                            </li>
+                            <li class="flex justify-between items-center font-bold border-t pt-4 mt-4" style="border-top-color: #E2E8F0;">
+                                <span>Initial Investment Total</span>
+                                <span>₹3,12,500</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="font-bold text-xl mb-4" style="color: #7A5195;">Recurring Annual Costs</h3>
+                        <ul class="space-y-4 text-gray-700">
+                            <li class="flex justify-between items-center">
+                                <span class="font-semibold">&#128203; Odoo Enterprise License</span>
+                                <span>₹90,000</span>
+                            </li>
+                            <li class="flex justify-between items-center">
+                                <span class="font-semibold">&#128248; Hosting (Odoo.sh)</span>
+                                <span>₹1,20,000</span>
+                            </li>
+                            <li class="flex justify-between items-center">
+                                <span class="font-semibold">&#128202; AMC & Support</span>
+                                <span>₹46,875</span>
+                            </li>
+                            <li class="flex justify-between items-center font-bold border-t pt-4 mt-4" style="border-top-color: #E2E8F0;">
+                                <span>Recurring Annual Total</span>
+                                <span>₹2,56,875</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
             <section id="efficiency-stat" class="mt-12">
                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <div class="col-span-1 md:col-span-2 lg:col-span-3 text-center">
@@ -217,6 +262,27 @@
                 </div>
             </section>
 
+            <section id="ingrowth-value" class="mt-12 bg-white rounded-lg shadow-md p-6 md:p-8">
+                <h2 class="text-3xl font-bold text-center mb-6">Why Choose Ingrowth Innovations?</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                    <div class="flex flex-col items-center text-center">
+                        <div class="text-4xl" style="color: #374C80;">&#128172;</div>
+                        <h3 class="font-bold text-lg mt-2">Strategic Partnership</h3>
+                        <p class="text-sm text-gray-600 mt-1">We go beyond software deployment, acting as a trusted advisor to ensure long-term adoption, efficiency, and ROI.</p>
+                    </div>
+                    <div class="flex flex-col items-center text-center">
+                        <div class="text-4xl" style="color: #7A5195;">&#128736;</div>
+                        <h3 class="font-bold text-lg mt-2">Proven Expertise</h3>
+                        <p class="text-sm text-gray-600 mt-1">Our team brings deep industry knowledge and a track record of successful Odoo implementations, ensuring relevance and high ROI.</p>
+                    </div>
+                    <div class="flex flex-col items-center text-center">
+                        <div class="text-4xl" style="color: #EF5675;">&#128221;</div>
+                        <h3 class="font-bold text-lg mt-2">Tailored Solutions</h3>
+                        <p class="text-sm text-gray-600 mt-1">The proposed solution is specifically designed for your industrial flow needs, ensuring a perfect fit with your existing operations.</p>
+                    </div>
+                </div>
+            </section>
+
             <section id="slas" class="mt-12">
                 <div class="text-center mb-8">
                     <h2 class="text-3xl font-bold">Service Level Agreements (SLAs)</h2>
@@ -287,6 +353,43 @@
                             <h4 class="font-bold text-lg" style="color:#FF764A;">Week 11+: Go-Live & Support</h4>
                             <p class="text-sm text-gray-600">Deployment and Ongoing Maintenance</p>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="next-steps" class="mt-12 bg-white rounded-lg shadow-md p-6 md:p-8 text-center">
+                <h2 class="text-3xl font-bold mb-4">Next Steps to Begin Your Transformation</h2>
+                <div class="flex flex-col md:flex-row justify-center items-center md:space-x-8 space-y-6 md:space-y-0">
+                    <div class="flex flex-col items-center">
+                        <div class="text-5xl font-black" style="color: #003F5C;">1</div>
+                        <h4 class="font-bold text-lg mt-2">Review & Finalize</h4>
+                        <p class="text-sm text-gray-600 mt-1">Review the proposal details and validate the scope and costing to ensure full alignment.</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <div class="text-5xl font-black" style="color: #7A5195;">2</div>
+                        <h4 class="font-bold text-lg mt-2">Formal Sign-Off</h4>
+                        <p class="text-sm text-gray-600 mt-1">Provide a formal sign-off to initiate the project and secure the necessary resources for a smooth start.</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <div class="text-5xl font-black" style="color: #EF5675;">3</div>
+                        <h4 class="font-bold text-lg mt-2">Project Kick-Off</h4>
+                        <p class="text-sm text-gray-600 mt-1">Engage key stakeholders and our team in a kick-off meeting to confirm schedules and officially begin the implementation journey.</p>
+                    </div>
+                </div>
+            </section>
+
+             <section id="key-benefits" class="mt-12 bg-white rounded-lg shadow-md p-6 md:p-8">
+                <h2 class="text-3xl font-bold text-center mb-6">Key Benefits of This ERP Implementation</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-sm text-gray-600">
+                    <div class="space-y-2">
+                        <p>&#10004; **Improved Operational Efficiency:** Automate manual processes across departments, from sales orders to financial reporting, reducing errors and saving valuable time.</p>
+                        <p>&#10004; **Real-Time Data & Analytics:** Gain a single, unified view of your business. Access real-time dashboards and reports for faster, data-driven decision-making.</p>
+                        <p>&#10004; **Enhanced Customer Satisfaction:** With streamlined service management and faster order-to-delivery cycles, you can provide a superior customer experience, which builds long-term loyalty.</p>
+                    </div>
+                    <div class="space-y-2">
+                        <p>&#10004; **Scalability for Future Growth:** The modular Odoo platform can easily adapt to new business units, acquisitions, and expansions, ensuring your system grows with your company.</p>
+                        <p>&#10004; **Reduced Costs & Better ROI:** Optimize inventory, reduce waste, and streamline procurement to lower operational costs and maximize your return on investment.</p>
+                        <p>&#10004; **Strengthened Security & Compliance:** Enforce consistent process controls and maintain a clear audit trail across all operations, which simplifies regulatory compliance and reduces risk.</p>
                     </div>
                 </div>
             </section>
