--- a/index.html
+++ b/index.html
@@ -382,14 +382,16 @@
                 <h2 class="text-3xl font-bold text-center mb-6">Key Benefits of This ERP Implementation</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-sm text-gray-600">
                     <div class="space-y-2">
-                        <p>&#10004; **Improved Operational Efficiency:** Automate manual processes across departments, from sales orders to financial reporting, reducing errors and saving valuable time.</p>
-                        <p>&#10004; **Real-Time Data & Analytics:** Gain a single, unified view of your business. Access real-time dashboards and reports for faster, data-driven decision-making.</p>
-                        <p>&#10004; **Enhanced Customer Satisfaction:** With streamlined service management and faster order-to-delivery cycles, you can provide a superior customer experience, which builds long-term loyalty.</p>
+                        <p>&#10004; <strong>Improved Operational Efficiency:</strong> Automate manual processes across departments, from sales orders to financial reporting, reducing errors and saving valuable time.</p>
+                        <p>&#10004; <strong>Real-Time Data & Analytics:</strong> Gain a single, unified view of your business. Access real-time dashboards and reports for faster, data-driven decision-making.</p>
+                        <p>&#10004; <strong>Enhanced Customer Satisfaction:</strong> With streamlined service management and faster order-to-delivery cycles, you can provide a superior customer experience, which builds long-term loyalty.</p>
                     </div>
                     <div class="space-y-2">
-                        <p>&#10004; **Scalability for Future Growth:** The modular Odoo platform can easily adapt to new business units, acquisitions, and expansions, ensuring your system grows with your company.</p>
-                        <p>&#10004; **Reduced Costs & Better ROI:** Optimize inventory, reduce waste, and streamline procurement to lower operational costs and maximize your return on investment.</p>
-                        <p>&#10004; **Strengthened Security & Compliance:** Enforce consistent process controls and maintain a clear audit trail across all operations, which simplifies regulatory compliance and reduces risk.</p>
+                        <p>&#10004; <strong>Scalability for Future Growth:</strong> The modular Odoo platform can easily adapt to new business units, acquisitions, and expansions, ensuring your system grows with your company.</p>
+                        <p>&#10004; <strong>Reduced Costs & Better ROI:</strong> Optimize inventory, reduce waste, and streamline procurement to lower operational costs and maximize your return on investment.</p>
+                        <p>&#10004; <strong>Strengthened Security & Compliance:</strong> Enforce consistent process controls and maintain a clear audit trail across all operations, which simplifies regulatory compliance and reduces risk.</p>
+                        <p>&#10004; <strong>Global Operations Support:</strong> The system is designed to handle multiple currencies, languages, and country-specific tax regulations, making it ideal for a global enterprise like Ingersoll Rand.</p>
+                        <p>&#10004; <strong>Seamless Integration with Existing Systems:</strong> The flexible Odoo platform can be integrated with your current tools, including IoT and legacy systems, to ensure a smooth transition and maintain data continuity.</p>
                     </div>
                 </div>
             </section>
